# fast_ai_streaming_UI

./: README.md  pyproject.toml
aistreamingui/: __init__.py
